Fix back-to-top button overlapping with phone button

--- a/css/style.css
+++ b/css/style.css
@@ -1739,7 +1739,7 @@ textarea.form-input {
 /* BACK TO TOP BUTTON */
 .back-to-top {
   position: fixed;
-  bottom: 30px;
+  bottom: 120px; /* Aligned above floating contact button (which is bottom: 40px, height: 60px) */
   right: -60px; /* Hidden initially */
   width: 50px;
   height: 50px;
@@ -1758,7 +1758,7 @@ textarea.form-input {
 }
 
 .back-to-top.show {
-  right: 30px;
+  right: 45px; /* Aligned vertically with the center of the floating contact button */
 }
 
 .back-to-top:hover {
@@ -2429,6 +2429,12 @@ textarea.form-input {
     width: 50px;
     height: 50px;
     font-size: 1.25rem;
+  }
+  .back-to-top {
+    bottom: 85px; /* Aligned above floating contact button (bottom: 20px, height: 50px) */
+  }
+  .back-to-top.show {
+    right: 20px; /* Aligned vertically with the floating contact button on mobile */
   }
 }
 
